Fixed scrollbar troubles and layering problems

--- a/css/main.css
+++ b/css/main.css
@@ -7,8 +7,9 @@
 }
 
 html {
+    width: 100%;
     height: 100%;
-    width: 100%; 
+
 }
 body {
     background-color: #edecec;
@@ -17,6 +18,7 @@ body {
     color: #74c9ba;
     font-size: 10px;
     overflow: hidden;
+    height: 100%;
 }
 header{
     width: inherit;
@@ -74,6 +76,8 @@ h2 {
     width: 100%;
     text-align: center;
     background-color: #74c9ba;
+    position: relative;
+    z-index: 10;
 }
 
 #banner-container a {
@@ -81,7 +85,7 @@ h2 {
     height: 237px;
     width:  100%;
     position: fixed;
-    z-index: 1;
+    z-index: 11;
 }
 
 /*NAV*/
@@ -91,11 +95,15 @@ h2 {
     opacity: .6;
     height: 47px;
     margin-top: -47px;
+    position: relative;
+    z-index: 12;
 }
 
 nav {
     border-bottom: 3px solid #8bffee;
     margin-top: -47px;
+        position: relative;
+    z-index: 14;
 }
 nav ul {
     height: 47px;
@@ -117,7 +125,7 @@ nav li {
 }
 nav li a {
     position: relative;
-    z-index: 4;
+    z-index: 13;
     padding-top: 15px;
     width: inherit;
     height: inherit;
@@ -146,6 +154,8 @@ nav li a:hover {
     min-width: auto;
     max-width: 350px;
     float: left; 
+    position: fixed;
+    z-index: 4;
 }
 #categories {
     height: 200px;
@@ -191,31 +201,38 @@ nav li a:hover {
     color: #edecec;
     font-size: 12px;
     line-height: 20px;
+
 }
 #container {
-    overflow: visible;
-    overflow-y: scroll;
+    overflow-y: hidden;
     overflow-x: hidden;
-    height: 100%;
-    width: 100%;
-    position: fixed;
+    margin-top: -237px;
     padding-left: 364px;
-    z-index: -1;
+    padding-top: 237px;
+    position: relative;
+    z-index: 2;
+    height: 100%;
+}
+#container2 {
+    height: 100%;
+    position: relative;
+    overflow-y: scroll;
 }
 /*WORK*/
 
 #work {
     overflow: hidden;
     overflow-y: hidden;
-    width: 820px;
+    width: 840px;
     margin-left: auto;
     margin-right: auto;
 }
 #thumbs {
+    overflow-y: hidden;
     margin-right: auto;
     margin-left: auto;
     margin-top: 56px;
-    overflow: hidden;
+    height: 100%;
 }
 #thumbs img:hover{
     opacity: .7;
@@ -236,10 +253,9 @@ nav li a:hover {
     margin-right: auto;
     margin-left: auto;
     margin-top: 56px;
-    width: 300px;
+    width: 750px;
     height: 300px;
     background: #edecec;
-    display: inline-block;
 }
 
 #about {
@@ -247,11 +263,12 @@ nav li a:hover {
     font-weight: 400;
     font-size: 11px;
     color: #222222;
-    text-align: left;
+    text-align: center;
     line-height: 25px;
-    display: inline-block;
-    width: 300px;
-    margin-left: 10px;
+    width: 750px;
+    margin-right: auto;
+    margin-left: auto;
+    margin-top: 20px;
 }
 
 footer {
@@ -259,6 +276,7 @@ footer {
     clear: both;
     width: 100%;
     text-align: center;
+    margin-bottom: 20px;
 }
 ::selection {
     color: #222222;
@@ -269,7 +287,7 @@ footer {
     background: #8bffee;
 }
 
-@media screen and (max-width: 1324px) {
+@media screen and (max-width: 1224px) {
 #sidebar {
     max-width: auto;
     min-width: 100px;
@@ -303,7 +321,7 @@ footer {
 }
 }
 
-@media screen and (max-width: 1024px) {
+@media screen and (max-width: 820px) {
 nav ul {
     width: 450px;
     margin-left: auto;
@@ -326,6 +344,7 @@ nav li a {
     width: 30%;
 }
 #container {
+    height: 100%
     float: right;
     min-width: 319px;
     width: 70%;
@@ -341,9 +360,14 @@ nav li a {
 #thumbs {
     max-width: 267px;
     margin-top: 0px;
+    overflow-x: hidden;
     
 }
 #thumbs img:nth-child(3n+2) {
+    margin-left: 0px;
+    margin-right: 0px;
+}
+#thumbs img:nth-child(2n+2) {
     margin-left: 0px;
     margin-right: 0px;
 }
